--- a/bio.html
+++ b/bio.html
@@ -1,24 +1,43 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <title>$ g42ftw #</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <title>$ g42ftw</title>
+  <script>
+		var t = ["$ g42ftw", "$ g42ft", "$ g42f", "$ g42", "$ g42", "$ g42", "$ g42f", "$ g42ft", "$ g42ftw", "$ g42ftw"];
+		var c = 0;
+		var i = setInterval(change, 2000);
+
+		function change() {
+			document.title = t[c];
+			c++;
+			if (c >= t.length) {
+				c = 0;
+			}
+		}
+	</script>
 </head>
-<body style="background-color: #121212; font-family: Bahnschrift; src:local(font.ttf)">
+<body style="font-family: Bahnschrift; src:local(font.ttf)">
     <ul class="nav nav-pills nav-fill">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link home" href="index.html">🏠</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#" style="box-shadow: 0rem 0rem 2rem 0.5rem rgba(0, 113, 255, .4)">Bio</a>
+          <a class="nav-link bio active" href="#">📃 Bio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="projects.html">Projects</a>
+          <a class="nav-link projects" href="projects.html">🚧</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link contact" href="contact.html">🤙</a>
         </li>
       </ul>
+
+    <div class="row" style="margin: 1rem; margin-left: 5rem; margin-right: 5rem;">
+      <h5>🚧 Work in progress!</h5>
+      <p>Bootstrap is shit when it comes to scrollspy elements 🌚</p>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </body>
