--- a/bio.html
+++ b/bio.html
@@ -19,12 +19,12 @@
 	</script>
 </head>
 <body style="font-family: Bahnschrift; src:local(font.ttf)">
-    <ul class="nav nav-pills nav-fill">
+    <ul class="nav nav-pills">
         <li class="nav-item">
           <a class="nav-link home" href="index.html">🏠</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link bio active" href="#">📃 Bio</a>
+          <a class="nav-link bio active" href="#">📃</a>
         </li>
         <li class="nav-item">
           <a class="nav-link projects" href="projects.html">🚧</a>
